--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,8 @@ main:
 
   - title: Checking δ-Satisfiability of Reals with Integrals
     authors: <strong>Cody Rivera</strong>, Bishnu Bhusal, Rohit Chadha, A. Prasad Sistla, Mahesh Viswanathan
-    conference: Conditionally Accepted to a Conference, 2025.
+    conference_short: OOPSLA
+    conference: To appear in Object-Oriented Programming, Systems, Languages & Applications <strong>(OOPSLA)</strong>, 2025.
 
   - title: 'Anvil: Building Kubernetes Controllers That Do Not Break'
     authors: Xudong Sun, Jiawei Tyler Gu, <strong>Cody Rivera</strong>, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, Tianyin Xu
