--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Basic Information 
 title: Cody Rivera
-position: Ph.D. Student
-affiliation: University of Illinois Urbana-Champaign
-affiliation_link: https://www.illinois.edu/
-department_affiliation: Siebel School of Computing and Data Science
-department_affiliation_link: https://siebelschool.illinois.edu/
+position: Incoming Ph.D. Student
+affiliation: University of Wisconsin-Madison
+affiliation_link: https://www.wisc.edu/
+department_affiliation: Department of Computer Sciences
+department_affiliation_link: https://www.cs.wisc.edu/
 email: codyjr3@illinois.edu
 
 # Search Engine Optimization (SEO)
