--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ affiliation: University of Wisconsin-Madison
 affiliation_link: https://www.wisc.edu/
 department_affiliation: Department of Computer Sciences
 department_affiliation_link: https://www.cs.wisc.edu/
-email: codyjr3@illinois.edu
+email: cjrivera@wisc.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
