--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Cody Rivera
-position: Incoming Ph.D. Student
+position: Ph.D. Student
 affiliation: University of Wisconsin-Madison
 affiliation_link: https://www.wisc.edu/
 department_affiliation: Department of Computer Sciences
@@ -9,7 +9,7 @@ email: cjrivera@wisc.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: cody, rivera, formal methods, verification, systems verification, intrinsic definitions
+keywords: cody, rivera, formal methods, verification, systems verification
 description: Cody Rivera's academic home page
 canonical: https://www.codyrivera.com/
 
